[-] MO : Fix buig #PSCFV-10480 Blockcart too long cart_block_product_name

--- a/modules/blockcart/blockcart.css
+++ b/modules/blockcart/blockcart.css
@@ -62,7 +62,7 @@
 	padding-bottom:10px
 }
 #cart_block #cart_block_list dt {padding:4px 0}
-#cart_block #cart_block_list dt a {font-weight:bold; display: inline-block; width: 95px}
+#cart_block #cart_block_list dt a {font-weight:bold; display: inline-block; max-width: 95px}
 #cart_block #cart_block_list dd {
 	margin-left:20px
 }
